fix: scrollbar, description text wrapping

--- a/src/pages/editor/components/FileManager/FileDescription/TextDescription.module.css
+++ b/src/pages/editor/components/FileManager/FileDescription/TextDescription.module.css
@@ -1,4 +1,5 @@
 .textDescription {
+    white-space: pre-wrap;
     padding: 0;
     margin: 0;
 }
