--- a/src/pages/main/Main.module.css
+++ b/src/pages/main/Main.module.css
@@ -4,6 +4,19 @@ body {
     margin: 0;
     padding: 0;
     transition: .3s;
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #2F2F2F;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 
